# chordarper

./: .gitignore  .gitmodules  CMakeLists.txt  ChordArper.jucer  Makefile  README.md  index.md
Builds/LinuxMakefile/: Makefile
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: ArpeggiatorPanel.cpp  ArpeggiatorPanel.h  ArpeggiatorPatternEditor.cpp  ArpeggiatorPatternEditor.h  ChordPanel.cpp  ChordPanel.h  DualArpeggiatorPanel.cpp  DualArpeggiatorPanel.h  GridItemPanel.cpp  GridItemPanel.h  KeyboardPanel.cpp  KeyboardPanel.h  LogoPanel.cpp  LogoPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScalePanel.cpp  ScalePanel.h  SwitchButton.h
Source/music-utils/: Chord.cpp  Chord.h  Scale.cpp  Scale.h
